\name{NEWS}
\title{News for Package \pkg{multiGSEA}}

\section{ Changes in version 0.99.0}{
\itemize{

  \item Package added to Bioconductor

}}