@@ -10,6 +10,7 @@ export(getOrganisms)
 export(initOmicsDataStructure)
 export(multiGSEA)
 export(rankFeatures)
+export(rename_duplicates)
 importFrom(AnnotationDbi,select)
 importFrom(dplyr,filter)
 importFrom(dplyr,pull)
