@@ -7,3 +7,12 @@
   \item Package added to Bioconductor
 
 }}
+
+\section{ Changes in version 1.0.1 (2020-11-05)}{
+
+\itemize{
+
+  \item Bug fix. Prevent duplicated pathway title to cause an error.
+  \item Include new function to enumerate duplicted pathway titles with trailing numbers.
+
+}}
